--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # Riportare il github del gruppo di progetto e quello del sito web (se differente).
 # Tali informazioni appariranno nel Footer del sito.
 github_repo:
-  - name: "SoBigData Master's projects Template"
+  - name: "g2-2025-website"
     url: "https://github.com/GiovannaAndreucci/g2-2025-website/"
 
 markdown: kramdown
