--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -52,7 +52,7 @@ navbar:
   nav:
     #- title: Guide
     #  url: /guide.html
-    - title: Example page
+    - title: Articolo
       url: /example.html
     #- title: Another ex page
     #  url: /new_page.html
@@ -86,7 +86,7 @@ googlefonts:
   - url: "https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 
 chulapa-skin:
-  skin:  "lymcha" #"sbd" # "sbd" "pixel " "graymor" "gitdev-dark" "gitdev" "universal" "academia" "gitdev" "towards" "pear" "twitter-lights-out" "twitter-dim" "wandoo" "lymcha" "twitter" "chulapa" "sunset" "minty" "lux" "journal" "deeply"
+  skin:  "chulapa" #"sbd" # "sbd" "pixel " "graymor" "gitdev-dark" "gitdev" "universal" "academia" "gitdev" "towards" "pear" "twitter-lights-out" "twitter-dim" "wandoo" "lymcha" "twitter" "chulapa" "sunset" "minty" "lux" "journal" "deeply"
   vars:
     # font-family-base:  "Space Mono"
 
