--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -89,13 +89,12 @@ chulapa-skin:
   skin:  "chulapa" #"sbd" # "sbd" "pixel " "graymor" "gitdev-dark" "gitdev" "universal" "academia" "gitdev" "towards" "pear" "twitter-lights-out" "twitter-dim" "wandoo" "lymcha" "twitter" "chulapa" "sunset" "minty" "lux" "journal" "deeply"
   vars:
     # font-family-base:  "Space Mono"
+    body-bg: "e8c28aff"
 
 
 chulapa-skin:
-  #autothemer  :  true
   vars:
-#    primary: "#07286E"
-    body-bg: "#e8c28aff"
+    body-bg: "e8c28aff"
 
 
 
