--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -46,7 +46,7 @@ url: "https://GiovannaAndreucci.github.io"
 navbar:
   style :  dual #don't change this, it is used to set the navbar style.
   brand: # this is the brand of the navbar, it will be displayed on the left side.
-    title :  "SoBigData Master's projects Template"
+    title :  "You don't need to be coy, COI!"
     img: "./assets/images/Logo_masthead.png" # don't change this
     url: /
   nav:
@@ -86,15 +86,16 @@ googlefonts:
   - url: "https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 
 chulapa-skin:
-  skin:  "chulapa" #"sbd" # "sbd" "pixel " "graymor" "gitdev-dark" "gitdev" "universal" "academia" "gitdev" "towards" "pear" "twitter-lights-out" "twitter-dim" "wandoo" "lymcha" "twitter" "chulapa" "sunset" "minty" "lux" "journal" "deeply"
+  skin:  "chulapa"
   vars:
     # font-family-base:  "Space Mono"
     body-bg: "e8c28aff"
 
 
-chulapa-skin:
-  vars:
-    body-bg: "e8c28aff"
+#chulapa-skin:
+#  autothemer  :  true
+#  vars:
+#    primary: "#07286E"
 
 
 
