--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -83,12 +83,12 @@ navbar:
 
 ## Google Fonts example to import Space Mono
 googlefonts:
-  - url: "https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+  - url: "https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
 
 chulapa-skin:
   skin:  "chulapa"
   vars:
-    # font-family-base:  "Space Mono"
+    font-family-base:  "EB Garamond"
 
 
 chulapa-skin:
