--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -88,7 +88,7 @@ googlefonts:
 chulapa-skin:
   skin:  "chulapa"
   vars:
-    font-family-base:  "EB Garamond"
+    font-family-base:  "EB Garamond, serif"
 
 
 chulapa-skin:
