--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,7 +79,7 @@ navbar:
 googlefonts:
 #  - url: "https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
   - url: "https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-#  - url: "https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap"
+  - url: "https://fonts.googleapis.com/css2?family=Charm:ital,wght@0,400;0,700;1,400&display=swap"
 
 ## Google Fonts example to import Space Mono
 #googlefonts:
@@ -89,6 +89,7 @@ chulapa-skin:
   skin:  "chulapa"
   vars:
     font-family-base:  "EB Garamond, serif"
+    heading-font-family: "Charm, cursive"
 
 
 #chulapa-skin:
