--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -85,20 +85,18 @@ googlefonts:
 #googlefonts:
  # - url: "https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
 
-#chulapa-skin:
-  #skin:  "chulapa"
-  #vars:
-    #font-family-base:  "EB Garamond, serif"
-    #heading-font-family: "Charm, cursive"
-
-
 chulapa-skin:
-  autothemer  :  true
+  skin:  "chulapa"
   vars:
- #  primary: "#07286E"
-    body-bg: = "e8c28aff"
     font-family-base:  "EB Garamond, serif"
     heading-font-family: "Charm, cursive"
+
+
+#chulapa-skin:
+#  autothemer  :  true
+# vars:
+#  primary: "#07286E"
+# body-bg: = "e8c28aff"
 
 
 
