--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -84,6 +84,7 @@ googlefonts:
 chulapa-skin:
   autothemer: true
   primary: "#e8c28aff"
+  body-bg: "#e8c28aff"
   vars:
     font-family-base:  "EB Garamond, serif"
     heading-font-family: "Charm, cursive"
