--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -36,7 +36,7 @@
   github: https://kdd.isti.cnr.it/people/student-4
   role: student
 - name: Emanuele Conte
-  linkedin: www.linkedin.com/in/emanuele-conte-161102220596-eng
+  linkedin: https://www.linkedin.com/in/emanuele-conte-161102220596-eng
   role: student
 - name: Mattia Fonderico
   github: https://kdd.isti.cnr.it/people/student-6
