--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -58,13 +58,13 @@ navbar:
     #  url: /new_page.html
     - title: Report tecnico
       child:
-        - title: Scraping e geolocalizzazione
+        - title: Scraping and Geolocation
           url: /scraping.html
-        - title: Estrazione aree mediche
+        - title: Medical Area Extraction
           url: /aree_med.html
-        - title: Estrazione aziende
+        - title: Company Extraction
           url: /aziende.html
-        - title: Grafo e community
+        - title: Graph and Community
           url: /folium.html
         #- title: Sliders
         #  url: /slider.html
