--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -39,7 +39,7 @@
   github: https://www.linkedin.com/in/emanuele-conte-161102220596-eng
   role: student
 - name: Mattia Fonderico
-  github: https://kdd.isti.cnr.it/people/student-6
+  github: https://www.researchgate.net/profile/Mattia-Fonderico?ev=hdr_xprf
   role: student
 - name: Viola Gullace
   github: https://kdd.isti.cnr.it/people/student-7
