--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -24,7 +24,7 @@
   home: true
 
 - name: Giovanna Andreucci
-  github: https://kdd.isti.cnr.it/people/student-1
+  github: https://github.com/GiovannaAndreucci
   role: student
 - name: Jacopo Arioli
   github: https://kdd.isti.cnr.it/people/student-2
