--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -27,20 +27,20 @@
   github: https://github.com/GiovannaAndreucci
   role: student
 - name: Jacopo Arioli
-  github: https://kdd.isti.cnr.it/people/student-2
+  github: https://github.com/risuscitami
   role: student
 - name: Davide Baronchelli
-  github: https://kdd.isti.cnr.it/people/student-3
+  github: https://github.com/dvd-brn
   role: student
 - name: Massimiliano Bianchini
-  github: https://kdd.isti.cnr.it/people/student-4
+  github: https://github.com/MassimilianoBianchini-ds
   role: student
 - name: Emanuele Conte
   github: https://www.linkedin.com/in/emanuele-conte-161102220596-eng
   role: student
 - name: Mattia Fonderico
-  github: https://www.researchgate.net/profile/Mattia-Fonderico?ev=hdr_xprf
+  github: https://github.com/mattiafonderico
   role: student
 - name: Viola Gullace
-  github: https://kdd.isti.cnr.it/people/student-7
+  github: https://github.com/violagul
   role: student
